Docs(Shop): 3rd upload

--- a/.env.example
+++ b/.env.example
@@ -32,8 +32,15 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
 LIQPAY_PUBLIC_KEY=sandbox_******************
 LIQPAY_PRIVATE_KEY=sandbox_*****************
+
+PAYPAL_PAYNOW_BUTTON_URL=
+PAYPAL_RECEIVER_EMAIL=
+PAYPAL_RETURN_URL=
 
 FACEBOOK_ID=7*******************************
 FACEBOOK_SECRET=b4**************************
